syntax = "proto2";

message Value {
    optional bytes buildId = 1;
}
